--- a/Fuente/styles/sass/components/_buttons.scss
+++ b/Fuente/styles/sass/components/_buttons.scss
@@ -1,23 +1,10 @@
-// Importo las Variables
+// Importo las Variables y el Mixin de la base de los botones
 @use '../utils/variables';
-
-// Estilos de los Botones
-@mixin boton-base($background-color, $hover-background-color, $border-color, $box-shadow) {
-    background-color: $background-color;
-    border: 2px solid ($border-color);
-    border-radius: 1rem;
-    box-shadow: $box-shadow;
-    transition: all 0.25s ease;
-
-    &:hover {
-        background-color: $hover-background-color;
-        transition: all 0.25s;
-    }
-}
+@use '../utils/mixins';
 
 /* Boton de Iniciar Sesion */
 .boton-inicio {
-    @include boton-base(
+    @include mixins.boton-base(
                 variables.$color-Secundario,
                 variables.$color-Neutro-Marron,
                 variables.$color-Neutro-Blanco,
@@ -26,7 +13,7 @@
 
 /* Boton Predeterminado */
 .boton-pred {
-    @include boton-base(
+    @include mixins.boton-base(
                 variables.$color-Principal,
                 variables.$color-Neutro-Marron,
                 variables.$color-Neutro-Blanco,
@@ -35,7 +22,7 @@
 
 /* Boton Footer */
 .boton-footer {
-    @include boton-base(
+    @include mixins.boton-base(
                 variables.$color-Principal,
                 variables.$color-Neutro-Blanco,
                 variables.$color-Neutro-Blanco,
