--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -10,31 +10,31 @@
     gap: 2.5rem;
     text-align: left;
     align-items: center;
+}
+
+.cont-texto {
+    margin-top: 1.5rem;
 
     h2 {
         text-align: left;
         margin-bottom: 1.5rem;
-    }
+    }    
 
-    .cont-texto {
-        margin-top: 1.5rem;
-
-        a {
-            margin-top: 2.5rem;
-        }
+    a {
+        margin-top: 2.5rem;
     }
+}
 
-    .img-deco-index {
-        display: block;
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-            
-        box-shadow: 0px 0px 5px 5px variables.$color-Neutro-Negro-rgba;
-        border: 2px solid variables.$color-Principal;
-        border-radius: 1rem;    
-        filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%); 
-    }
+.img-deco-index {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    
+    box-shadow: 0px 0px 5px 5px variables.$color-Neutro-Negro-rgba;
+    border: 2px solid variables.$color-Principal;
+    border-radius: 1rem;    
+    filter: brightness(0.85) contrast(115%) saturate(140%) sepia(45%); 
 }
 
 .anuncio {
@@ -44,14 +44,14 @@
     background-color: variables.$color-Terciario;
     border-radius: 1rem;
     border: 2px solid variables.$color-Secundario;
+}
 
-    .anuncio-texto {
-        text-align: center;
-        font-weight: bolder;
-        font-size: 1.5rem;
-        text-indent: 0;
-        color: variables.$color-Principal;
-    }
+.anuncio-texto {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    text-indent: 0;
+    color: variables.$color-Principal;
 }
 
 .redes {
@@ -62,47 +62,46 @@
     justify-content: center;
     align-items: center;
     gap: 1.5rem;
+}
 
-    .redes-img {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 1.5rem;
+.redes-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
+}
 
-        .img-deco-index-redes {
-            position: relative;
-            width: 100%;
-            aspect-ratio: 1/1;
-            border: 4px solid variables.$color-Principal;
-            border-radius: 1rem;
-            overflow: hidden;
-            transition: all 0.5s;
-            filter: brightness(0.75) contrast(115%) saturate(140%) sepia(45%); 
-
-            .img-main {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-
-            &:hover {
-                cursor: pointer;
-                transform: scale(1.05);
-                filter: brightness(0.80);
-                transition: all 0.5s;
-            }
-
-            .img-Instagram {
-                position: absolute;
-                bottom: 1rem;
-                right: 1rem;
-                width: 3rem;
-                height: 3rem;
-                padding: 0.25rem;
-                background-color: variables.$color-Secundario;
-                border: 3px solid variables.$color-Neutro-Negro;
-                border-radius: 1rem;
-                z-index: 10;
-            }
-        }
+.img-deco-index-redes {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 1/1;
+    border: 4px solid variables.$color-Principal;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: all 0.5s;
+    filter: brightness(0.8) contrast(115%) saturate(140%) sepia(45%); 
+}
+.img-main {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+        
+    &:hover {
+        cursor: none;
+        transform: scale(1.05);
+        filter: brightness(1.1);
+        transition: all 0.5s;
     }
+}
+
+.img-Instagram {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    padding: 0.25rem;
+    background-color: variables.$color-Secundario;
+    border: 3px solid variables.$color-Neutro-Negro;
+    border-radius: 1rem;
+    z-index: 10;
 }
