--- a/Fuente/styles/sass/components/_buttons.scss
+++ b/Fuente/styles/sass/components/_buttons.scss
@@ -2,8 +2,24 @@
 @use '../utils/variables';
 @use '../utils/mixins';
 
+/* Hago herencia para la base de los botones */
+%boton-base {
+    display: inline-block;
+    border: 2px solid;
+    border-radius: 1rem;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    
+    &:hover {
+        transition: all 0.25s;
+    }
+}
+
 /* Boton de Iniciar Sesion */
 .boton-inicio {
+    @extend %boton-base;
     @include mixins.boton-base(
                 variables.$color-Secundario,
                 variables.$color-Neutro-Marron,
@@ -13,6 +29,7 @@
 
 /* Boton Predeterminado */
 .boton-pred {
+    @extend %boton-base;
     @include mixins.boton-base(
                 variables.$color-Principal,
                 variables.$color-Neutro-Marron,
@@ -22,6 +39,7 @@
 
 /* Boton Footer */
 .boton-footer {
+    @extend %boton-base;
     @include mixins.boton-base(
                 variables.$color-Principal,
                 variables.$color-Neutro-Blanco,
