Cambios Poca Cosa

--- a/Fuente/styles/css/index.css
+++ b/Fuente/styles/css/index.css
@@ -218,8 +218,15 @@ footer {
   height: 2.75rem;
   padding: 0.5rem;
   background-color: #961316;
-  box-shadow: 0 0 0 0.2rem #F1A2A2;
+  box-shadow: 0 0 0 0.2rem #F1E7E7;
   border-radius: 1.75rem;
+  transition: all 0.5s ease;
+}
+
+.img-logoRedes:hover {
+  background-color: #F1E7E7;
+  box-shadow: 0 0 0 0.2rem #961316;
+  transition: all 0.5s ease;
 }
 
 .fila-inferior {
