--- a/Fuente/styles/css/index.css
+++ b/Fuente/styles/css/index.css
@@ -105,6 +105,7 @@ a:hover {
   border-color: #F1E7E7;
   box-shadow: none;
   padding: 0.75rem;
+  cursor: default;
 }
 .boton-footer:hover {
   background-color: #F1E7E7;
@@ -122,18 +123,19 @@ header {
   min-height: 10rem;
   z-index: 5;
   box-shadow: 0 0.625rem 0.3125rem 0 rgba(34, 34, 34, 0.5);
+  z-index: 10;
 }
 
 .img-logoHeader {
   width: 9rem;
   height: 9rem;
   margin: 0.5rem 0 0.5rem 5rem;
+  transition: all 0.5s;
 }
 .img-logoHeader:hover {
   width: 8.75rem;
   height: 8.75rem;
   margin: auto;
-  transition: all 0.5s;
 }
 .img-logoHeader:active {
   transform: scale(0.9) skew(-2deg);
@@ -153,6 +155,11 @@ header {
   color: #F1E7E7;
   font-size: 5rem;
   cursor: pointer;
+  transition: all 0.5s;
+}
+.menu-desplegable:hover {
+  transform: scale(1, 0.75);
+  color: #F1A2A2;
 }
 
 .enlaces {
@@ -160,8 +167,24 @@ header {
   flex-direction: row;
   list-style: none;
 }
-.enlaces a:hover {
-  color: #F1A2A2;
+.enlaces a {
+  position: relative;
+  text-decoration: none;
+}
+.enlaces a::after {
+  content: "";
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0.15rem;
+  background-color: #F1A2A2;
+  transition: width 0.3s ease;
+}
+.enlaces a:hover::after {
+  width: 85%;
 }
 
 .separado {
@@ -273,7 +296,7 @@ footer {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0 10px 5px 0 rgba(34, 34, 34, 0.5);
+  box-shadow: 0 0.625rem 0.3125rem 0 rgba(34, 34, 34, 0.5);
 }
 
 .img-header-pred {
@@ -384,12 +407,11 @@ footer {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: all 0.5s;
 }
 .img-main:hover {
-  cursor: none;
   transform: scale(1.05);
   filter: brightness(1.1);
-  transition: all 0.5s;
 }
 
 .img-Instagram {
@@ -448,18 +470,23 @@ footer {
     position: relative;
   }
   .enlaces {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     position: absolute;
+    opacity: 0;
     right: 0;
+    transform: translateY(-1rem);
   }
   .enlaces.activo {
-    display: flex;
+    opacity: 1;
     top: 5rem;
     background-color: #961316;
-    text-align: center;
-    border-bottom-left-radius: 2rem;
-    flex-direction: column;
-    position: absolute;
+    box-shadow: inset 0 10px 5px 0 rgba(34, 34, 34, 0.5);
+    transform: translateY(0);
+    transition: all 0.5s;
+    z-index: 1;
   }
   .separado {
     margin: 0 0.5rem 0 1rem;
@@ -555,6 +582,10 @@ footer {
   .menu-desplegable {
     font-size: 5rem;
   }
+  .enlaces.activo {
+    flex-direction: row;
+    width: 100%;
+  }
   .img-Instagram {
     width: 2rem;
     height: 2rem;
@@ -585,12 +616,15 @@ footer {
     display: flex;
     flex-direction: row;
     position: relative;
+    opacity: 1;
+    transform: none;
   }
   .enlaces.activo {
-    display: flex;
-    flex-direction: row;
-    position: relative;
     top: 0;
+    width: auto;
+    background-color: none;
+    box-shadow: none;
+    transition: none;
   }
   .redes-img {
     display: grid;
