--- a/Fuente/styles/sass/components/_buttons.scss
+++ b/Fuente/styles/sass/components/_buttons.scss
@@ -46,6 +46,7 @@
                 variables.$color-Neutro-Blanco,
                 none);
     padding: 0.75rem;
+    cursor: default;
     
     &:hover {
         color: variables.$color-Neutro-Negro;
