--- a/Fuente/styles/sass/layout/_header.scss
+++ b/Fuente/styles/sass/layout/_header.scss
@@ -14,18 +14,19 @@ header {
     min-height: px-to-rem(160px);
     z-index: 5;
     box-shadow: 0 px-to-rem(10px) px-to-rem(5px) 0 variables.$color-Neutro-Negro-rgba;
+    z-index: 10;
 }
 
 .img-logoHeader {
     width: px-to-rem(144px);
     height: px-to-rem(144px);
     margin: px-to-rem(8px) 0 px-to-rem(8px) px-to-rem(80px);
+    transition: all 0.5s;
 
     &:hover {
         width: px-to-rem(140px);
         height: px-to-rem(140px);
         margin: auto;
-        transition: all 0.5s;
     }
 
     &:active {
@@ -47,15 +48,39 @@ header {
     color: variables.$color-Neutro-Blanco;
     font-size: px-to-rem(80px);
     cursor: pointer;
+    transition: all 0.5s;
+
+    &:hover {
+        transform: scale(1,0.75);
+        color: variables.$color-Terciario;
+    }
 }
 
 .enlaces {
     display: flex;
     flex-direction: row;
     list-style: none;
+    
+    a {
+        position: relative;
+        text-decoration: none;
         
-    a:hover {
-        color: variables.$color-Terciario;
+        &::after {
+            content: "";
+            position: absolute;
+            top: 80%;
+            left: 50%;
+            bottom: 0;
+            transform: translateX(-50%);
+            width: 0;
+            height: 0.15rem;       
+            background-color: variables.$color-Terciario; 
+            transition: width 0.3s ease;
+        }
+
+        &:hover::after {
+            width: 85%;
+        }
     }
 }
 
